[tool.poetry]
name = "package-two"
dynamic = ["version"]
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.6.0"


[build-system]
requires = ["setuptools>=60", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"
